--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=QuickDrop
+application.vendor=Jadge
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,14 @@ dist.jar=${dist.dir}/QuickDrop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuickDrop
+endorsed.classpath=
 excludes=
-file.reference.TimingFramework-0.55.jar=C:\\Users\\Jadge\\Downloads\\tabbed-pane-material-main\\tabbed-pane-material-main\\TimingFramework-0.55.jar
+file.reference.mysql-connector-j-8.0.32.jar=src/lib/mysql-connector-j-8.0.32.jar
+file.reference.TimingFramework-0.55.jar=src/lib/TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
     ${file.reference.TimingFramework-0.55.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -73,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=QuickDrop
-main.class=quickdrop.Main
+main.class=quickdrop.QuickDrop
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
